--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "material-design-icons": "^3.0.1",
+    "popper.js": "^1.16.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
