--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
+    "@vue/apollo-composable": "^4.0.0-alpha.12",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
     "material-design-icons": "^3.0.1",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vuex": "^4.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
