Saved work progress

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VUE_APP_GRAPHQL_API=https://rickandmortyapi.com/graphql
+VUE_APP_CHARACTERS_FIELDS_LIST=foto|characterId|name|gender|species|lastEpisode
+VUE_APP_CHARACTERS_FIELDS_DISPLAY=foto:Photo|characterId:Character ID|name:Name|gender:Gender|species:Species|lastEpisode:Last Episode
